--- a/templates/universalpages/individual.html
+++ b/templates/universalpages/individual.html
@@ -45,7 +45,7 @@
     {% set item.descriptionClass = "section--green" %}
   {% endif %}
 
-  <main>
+  <main class="page__wrapper">
 
   {# Hero image ------------------------------------------------------------ #}
 
