--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -179,6 +179,10 @@
   margin-top: 2rem;
   margin-bottom: 1rem;
   text-transform: uppercase;
+  
+  & a:hover {
+    color: var(--background-color);
+  }
 }
 
 .footer__pages {
