--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,31 +5,16 @@
     {# continue without rendering #}
   {% else %}
   <div class="footer__sections">
-    {# Phase 1 - Enrollment #}
-    {% if cms.phases.current_phase === "Enrollment" %}
-      {% for section in cms.phase1primarynav.phase_1__secondary_nav_items %}
-        <div class="footer__section-container">
-          <p class="footer__title">{{ section.name }}</p>
-          <ul class="footer__pages">
-            {% for page in section.universal__pages %}
-              <li class="footer__subtitle"><a href="{{ url(page) }}">{{ page.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
-      {% endfor %}
-    {# Phase 2 - Orientation #}
-    {% elseif cms.phases.current_phase === "Orientation" %}
-      {% for section in cms.phase2primarynav.phase_2__secondary_nav_items %}
-        <div class="footer__section-container">
-          <p class="footer__title">{{ section.name }}</p>
-          <ul class="footer__pages">
-            {% for page in section.universal__pages %}
-              <li class="footer__subtitle"><a href="{{ url(page) }}">{{ page.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
-      {% endfor %}
-    {% endif %}
+    {% for section in cms.navigation.sections %}
+      <div class="footer__section-container">
+        <p class="footer__title"><a href="{{ url(section) }}">{{ section.name }}</a></p>
+        <ul class="footer__pages">
+          {% for page in section.pages %}
+            <li class="footer__subtitle"><a href="{{ url(page) }}">{{ page.name }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endfor %}
   </div>
   {% endif %}
   <div class="footer__final">
