--- a/scss/dependencies/_type.scss
+++ b/scss/dependencies/_type.scss
@@ -181,6 +181,10 @@ $modal-heading: (
   base: (38px, 38px)
 );
 
+$home-body-text: (
+  base: (44px, 48px)
+);
+
 $modal-description: (
   base: (18px, 22px)
 );
