moves block-padding css variable to be on the :root since the homepage hero does not sit under the .home context. this restores the padding to the hero lockup. the hero lockup padding is doubled to match the padding of all other block elements

--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -1,8 +1,10 @@
+:root {
+  --block-padding: 2rem;
+}
+
 .home {
   display: flex;
   flex-wrap: wrap;
-
-  --block-padding: 2rem;
 }
 
 .home__hero {
@@ -63,7 +65,7 @@
 
 .home__hero-lockup-wrapper {
   text-align: center;
-  max-width: calc(100% - var(--block-padding));
+  max-width: calc(100% - (2 * var(--block-padding)));
 }
 
 .home__hero-lockup {
