updates type sizes for mobile and other adjustments per github. in support of #2

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -238,3 +238,13 @@
   @extend %sans-serif;
   color: $pop-color;
 }
+
+@include respond-below(small) {
+  .footer__title,
+  .footer__subtitle,
+  .footer__contact p,
+  .footer__social-link,
+  .footer__external-link {
+    @include text-size($footer-overrides);
+  }
+}
