updates nav active state to be text-decoration underline instead of changing colors. adds padding to .home-module__image-link-text. sets home-module__videos-title to uppercase on mobile screens. removes extra space from footer nav. allows for full-width nav on smaller screens. adds mobile hero image to section landing pages. removes extra space on the ul that sits within the footer's external links div

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -172,6 +172,10 @@
   }
 }
 
+.footer__section-container:first-child .footer__title {
+  margin-top: 0;
+}
+
 .footer__title {
   color: $text-color;
   @extend %sans-serif;
@@ -221,7 +225,6 @@
 
 .footer__external-links ul {
   list-style: none;
-  padding-top: 0.5rem;
 }
 
 .footer__external-links .footer__title {
