adds a date.show_description_on_load switch to the Calendar Items. when true, the item will be toggled open. in support of #3

--- a/templates/partials/dates.html
+++ b/templates/partials/dates.html
@@ -38,8 +38,12 @@
             {% endif %}
           </h3>
         {% endif %}
-
-        <div class="calendar__item">
+        
+        {% set calendarItemClasses = "calendar__item" %}
+        {% if date.show_description_on_load === true %}
+          {% set calendarItemClasses = calendarItemClasses + " toggled" %}
+        {% endif %}
+        <div class="{{ calendarItemClasses }}">
           {% if date.end_date %}
             <div class="calendar__dates">
               <div class="calendar__date">
