updates the modal__close button svg to have its width automatically set, rather than being 100% wide, which was causing it to be centered within a full width container. in support of #5

--- a/scss/components/_modal--site-context.scss
+++ b/scss/components/_modal--site-context.scss
@@ -219,6 +219,10 @@ body.modal--showing .modal {
   right: 0;
 }
 
+.modal__close svg {
+  width: auto;
+}
+
 .modal__button {
   display: inline-block;
   margin-top: 1.6rem;
