updates site for the global notification fields in the home cms entry

--- a/scss/components/_main-nav-v2.scss
+++ b/scss/components/_main-nav-v2.scss
@@ -2,6 +2,10 @@
   display: none;
 }
 
+body.notification--is-opened [data-react-component='Nav'] header {
+  top: var(--notification-height);
+}
+
 [data-react-component='Nav'] a {
   font-weight: bold;
 }
