--- a/scss/site.scss
+++ b/scss/site.scss
@@ -28,6 +28,7 @@
 @import "components/lightbox";
 @import "components/supporting-content";
 @import "components/modal--site-context";
+@import "../node_modules/@risd/component-notification/scss/index";
 
 //Page specific modules, which hopefully can distill down even further into components.
 // @import "pages/test";
