--- a/scss/components/_page.scss
+++ b/scss/components/_page.scss
@@ -89,6 +89,15 @@ body.notification--is-opened .page__wrapper {
   }
 }
 
+// to be removed once video is implemented
+body.open-risd .page__hero--desktop {
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: black;
+}
+
 .page__hero--mobile {
   display: block;
   @include respond-above(medium) {
