--- a/scss/components/_page.scss
+++ b/scss/components/_page.scss
@@ -83,7 +83,7 @@ body.notification--is-opened .page__wrapper {
   display: none;
   height: 100%;
   background-size: cover;
-  background-position: top;
+  background-position: center;
   @include respond-above(medium) {
     display: block;
   }
@@ -109,7 +109,7 @@ body.open-risd .page__hero--desktop {
   width: 100%;
 
   @include respond-above(medium) {
-    height: 75vh;
+    height: 50vh;
   }
 
   img {
