--- a/scss/components/_programs.scss
+++ b/scss/components/_programs.scss
@@ -22,6 +22,9 @@
   display: inline-block;
   flex-basis: 100%;
   line-height: 0;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 2rem;
   // cursor: zoom-in;
 
   @include respond-above(small) {
@@ -30,6 +33,7 @@
 
   @include respond-above(medium) {
     flex-basis: 40%;
+    padding: 0;
   };
 
   img {
