updated modal language and icon

--- a/templates/partials/modal--site-context.html
+++ b/templates/partials/modal--site-context.html
@@ -5,8 +5,8 @@
       {% include "templates/partials/icons/modal-star-2--desktop.html" %}
       <div class="modal__content">
         <h3 class="modal__heading">Take required actions</h3>
-        <p class="modal__line-item"><span class="modal__pictogram">{% include "templates/partials/icons/modal--deposit--desktop.svg" %}</span><span class="modal__line-item-text">Submit your deposit</span></p>
-        <p class="modal__line-item"><span class="modal__pictogram">{% include "templates/partials/icons/modal--housing--desktop.svg" %}</span><span class="modal__line-item-text">Review housing options</span></p>
+        <p class="modal__line-item"><span class="modal__pictogram">{% include "templates/partials/icons/modal--deposit--desktop.svg" %}</span><span class="modal__line-item-text">Make your deposit</span></p>
+        <p class="modal__line-item"><span class="modal__pictogram">{% include "templates/partials/icons/modal--forms--desktop.svg" %}</span><span class="modal__line-item-text">Complete forms</span></p>
         <p class="modal__line-item"><span class="modal__pictogram">{% include "templates/partials/icons/modal--documents--desktop.svg" %}</span><span class="modal__line-item-text">Submit required documents</span></p>
         <div class="modal__button button">
           <a href="{{ admissions_modal_url }}" {{ openExternalLinkInNewWindow(admissions_modal_url) }}><span class="button__arrow button--left">{% include "templates/partials/icons/arrow--naked.html" %}</span>Log in</a>
