--- a/scss/site.scss
+++ b/scss/site.scss
@@ -29,6 +29,8 @@
 @import "components/supporting-content";
 @import "components/modal--site-context";
 @import "components/video";
+@import "components/videos-list";
+@import "components/link-list";
 @import "../node_modules/@risd/component-notification/scss/index";
 
 //Page specific modules, which hopefully can distill down even further into components.
