adds Video 2 set of fields, refactors the home videos module to support two sets of fields. updates the styles to set the second set of fields with a white background.

--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -442,6 +442,9 @@
   padding: var(--block-padding);
   background-color: var(--button-light);
 }
+.home-module__videos + .home-module__videos {
+  background-color: var(--button-white);
+}
 
 .home-module__videos-wrapper {
   display: flex;
