--- a/templates/universalpages/individual.html
+++ b/templates/universalpages/individual.html
@@ -70,7 +70,7 @@ k{% extends "templates/partials/base.html" %}
       <div class="page__hero--desktop" style="background-image: url({{ item.hero_image|imageSize(1200) }})"></div>
       <img src="{{ item.hero_image|imageSize(1200) }}" alt="" class="page__hero--mobile">
     </section>
-  {% elseif item.hero_video %}
+  {% elseif item.hero_video and item.hero_video.html %}
     <section class="section--full" id="livestream">
       <div class="video-module">
         <div class="video-module__container">{{ item.hero_video.html|safe }}</div>
