updates video list to include descriptions. updates video list title to be an h3 instead of an h2.

--- a/scss/components/_videos-list.scss
+++ b/scss/components/_videos-list.scss
@@ -29,9 +29,12 @@
 }
 
 .videos__title {
-  // @include text-size($sans-l);
+  @include text-size($sans-l);
   color: var(--pop-color);
+  text-align: center;
   margin-bottom: 1rem;
+  margin-bottom: 3rem;
+  margin-top: 4rem;
 }
 
 .video__title {
