--- a/templates/partials/videos.html
+++ b/templates/partials/videos.html
@@ -1,9 +1,9 @@
 {% for video in videos %}
   {% if loop.first %}
     {% if videos_title %}
-      <h2 class="videos__title" id="{{ videos_title|slugify }}">
+      <h3 class="videos__title" id="{{ videos_title|slugify }}">
         {{ videos_title }}
-      </h2>
+      </h3>
     {% endif %}
   {% endif %}
 
@@ -20,6 +20,12 @@
 
     {% if video.video_title %}
       <h3 class="video__title">{{ video.video_title }}</h3>
+    {% endif %}
+
+    {% if video.video_description %}
+      <div class="video__description">
+        {{ video.video_description|safe }}
+      </div>
     {% endif %}
 
     {% if video.video_url %}
